# metal-rs

./: .gitignore  CLAUDE.md  Cargo.toml  FOUNDATION.md  IMPLEMENTATION_SUMMARY.md  Metal.framework  OBJC_FFI.md  PORTING_METAL_TO_RUST_GUIDE.md  README.md  TODO.md  TODO_PORTING_STATUS.md  UNIMPLEMENTED.md  dump_methods  dump_methods.m  function_handle.md  mpsgraph-rs  notes.md  output.txt  rules.md  test_function_handle.rs  test_function_handle.sh  todo.md
.cursor/rules/: porting.mdc
examples/: acceleration_structure.rs  acceleration_structure_command_encoder.rs  argument_reflection.rs  basic_compute.rs  binary_archive.rs  blit_copy.rs  blit_pass.rs  blit_pass_descriptor.rs  compute_pass.rs  counters.rs  dynamic_library.rs  event_sync.rs  function_descriptor.rs  function_handle.rs  function_log.rs  function_stitching.rs  indirect_command_buffer.rs  intersection_function_table.rs  io_operations.rs  linked_functions.rs  log_state.rs  pipeline_buffers.rs  pipeline_simple.rs  rasterization_rate.rs  residency_set.rs  resource_state_command_encoder_test.rs  resource_state_encoder.rs  resource_test.rs  sampler_test.rs  stage_input.rs  visible_function_table.rs
src/: acceleration_structure_command_encoder.rs  buffer.rs  command_buffer.rs  command_buffer_descriptor.rs  command_queue.rs  compute_pipeline.rs  counters.rs  depth_stencil.rs  device.rs  drawable.rs  fence.rs  function_constant_values.rs  function_handle.rs  indirect_command_buffer.rs  lib.rs  linked_functions.rs  pixel_format.rs  prelude.rs
src/acceleration/: acceleration_structure.rs  acceleration_structure_descriptor.rs  acceleration_structure_sizes.rs  mod.rs  packed.rs  types.rs
src/acceleration_structure/: acceleration_structure.rs  axis_aligned_bounding_box.rs  bounding_box_geometry_descriptor.rs  component_transform.rs  curve_basis.rs  curve_end_caps.rs  curve_geometry_descriptor.rs  curve_type.rs  descriptor.rs  geometry_descriptor.rs  instance_options.rs  (+20 more)
tests/: basic_flow.rs
(+379 files in other folders)
