[package]
name = "metal-rs"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Eugene Bokhan <eugenebokhan@icloud.com>"]
description = "Rust bindings for Apple's Metal API"
readme = "README.md"
keywords = ["metal", "graphics", "apple", "macos", "ios"]
categories = ["api-bindings", "graphics", "rendering"]
repository = "https://github.com/eugenebokhan/metal-rs"

[dependencies]
core-graphics-types = { version = "0.2.0", default-features = false }
core-graphics = "0.25.0"
bytemuck = { version = "1.23.2", features = ["derive"] }
libc = "0.2.175"

objc2 = { version = "0.6.2" }
objc2-foundation = { version = "0.3.1" }
objc2-core-foundation = { version = "0.3.1" }
objc2-io-surface = { version = "0.3.1" }
dispatch2 = { version = "0.3.0" }
block2 = { version = "0.6.1" }
once_cell = { version = "1.21.3" }
bitflags = "2.9.4"

[lib]
name = "metal_rs"
path = "src/lib.rs"